# plotgeom

./: .gitignore  README.md  pyproject.toml
src/plotgeompy/: __init__.py
src/plotgeompy/cap/: cap_surface.html  cap_surface_side.html  threed_surface.py
