[project]
name = "plotgeompy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Xi Luo", email = "xi.rossi.luo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.1",
    "matplotlib>=3.10.8",
]

[project.scripts]
plotgeompy = "plotgeompy:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
